--- a/JsfClass/src/main/webapp/resources/dark/css/demo.css
+++ b/JsfClass/src/main/webapp/resources/dark/css/demo.css
@@ -10,7 +10,7 @@ body {
     margin-top: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: #111;
+    background-color: #437A1E;
     color: #fee;
 }
 
